Version 17

--Fixed bug that was causing useLargestWindow setting to be ignored.  Now
  window size can be set by user (thanks Colorfusion).

--Quadrupled all tool prices.



Version 16   Live Server Fixes

--Changed so that every house earns something in each pay interval (a minimum
  fraction of the maximum possible pay).




Version 16   2013-August-21

--Added support for web proxies (thanks Florian Yusuf Ali).

--Fixed visibility computation mismatch across platforms (caused by floating
  point round-off inconsistencies between platforms) by switching to an integer
  visibility computation.  This was causing server-side simulation of robberies
  to fail in rare cases (thanks Raymond Koo).

--Blocked quitting from game when quitting would kill player (during robbery
  and self-test).

--Animals now only follow or flee you if they can see you.

--Metal walls no longer conduct electricity.

--Removed wired wooden walls.

--Powered doors and trapdoors no longer pass power to neighboring objects.

--Added version of inicator lights that don't pass power.

--Game now runs in windowed mode by default, picking the largest window that
  fits comfortably on the user's screen.




Version 15   Live Server Fixes

--Fixed a potential deadlock involving house map cache flushing.

--Fixed unavoidable deadlock in endRobHouse by restarting transaction (thanks
  Colorfusion).

--Server now emails admin a report about each fatal error that occurs.

--Salary now based on a percentage of house value, but caps out at a fixed
  amount for houses with value greater than 10,000.

--Brand new houses are kept off the robbable list for 5 minutes from the time
  they are created by the server.  This reduces the prevalance of throw-away
  houses and also thwarts two-account collaboration where one account quickly
  dumps starting money to the other.

--Fixed so that a house containing paintings will never show an empty vault