@@ -157,13 +157,13 @@ $smtpPassword = "secret";
 //
 // array( ID, Price, InGallery, Note )
 $defaultPrices = array(
-    array( 1, 10, 0, "Wooden Wall" ),
-    array( 2, 30, 0, "Steel Wall" ),
-    array( 3, 50, 0, "Concrete Wall" ),
+    array( 1, 5, 0, "Wooden Wall" ),
+    array( 2, 80, 0, "Steel Wall" ),
+    array( 3, 120, 0, "Concrete Wall" ),
     array( 0, 0, 0, "Empty Floor" ),
     array( 21, 20, 0, "Door" ),
     array( 20, 15, 0, "Window" ),
-    array( 111, 100, 0, "Pit" ),
+    array( 111, 180, 0, "Pit" ),
     array( 103, 200, 0, "Power Source" ),
     array( 102, 5, 0, "Wiring" ),
     array( 120, 5, 0, "Vertical Wiring" ),
@@ -177,25 +177,25 @@ $defaultPrices = array(
     array( 106, 10, 0, "Wire Bridge" ),
     array( 104, 20, 0, "Voltage-triggered Switch" ),
     array( 105, 20, 0, "Voltage-triggered Inverted Switch" ),
-    array( 30, 100, 0, "Automatic Door" ),
     array( 110, 50, 0, "Electric Floor" ),
-    array( 112, 200, 0, "Powered Trapdoor" ),
-    array( 70, 200, 0, "Pit Bull" ),
+    array( 30, 1200, 0, "Automatic Door" ),
+    array( 112, 1800, 0, "Powered Trapdoor" ),
+    array( 70, 800, 0, "Pit Bull" ),
     array( 71, 100, 0, "Chihuahua" ),
     array( 72, 20, 0, "Cat" ),
     
-    array( 500, 300, 0, "Saw" ),
-    array( 509, 300, 0, "Crowbar" ),
-    array( 501, 900, 0, "Cutting Torch" ),
-    array( 502, 3000, 0, "S-W Model 36" ),
-    array( 503, 6, 0, "Brick" ),
-    array( 504, 30, 0, "Voltage Detector" ),
-    array( 505, 18, 0, "Doorstop" ),
-    array( 506, 300, 0, "Wire Cutters" ),
-    array( 507, 1500, 0, "Ammonium Nitrate Diesel Bomb" ),
-    array( 508, 60, 0, "Drugged Meat" ),
-    array( 510, 6, 0, "Water" ),
-    array( 511, 1800, 0, "Ladder" ),
+    array( 500, 50, 0, "Saw" ),
+    array( 509, 2400, 0, "Crowbar" ),
+    array( 501, 800, 0, "Cutting Torch" ),
+    array( 502, 1600, 0, "S-W Model 36" ),
+    array( 503, 150, 0, "Brick" ),
+    array( 504, 10, 0, "Voltage Detector" ),
+    array( 505, 1200, 0, "Doorstop" ),
+    array( 506, 50, 0, "Wire Cutters" ),
+    array( 507, 1200, 0, "Ammonium Nitrate Diesel Bomb" ),
+    array( 508, 400, 0, "Drugged Meat" ),
+    array( 510, 26, 0, "Water" ),
+    array( 511, 3600, 0, "Ladder" ),
 
     array( 2000, 100000, 1, "Owl - Rohrer" ),
     array( 2001, 100000, 1, "Sky - Rohrer" ),
